cmake_minimum_required(VERSION 2.8.3)
project(qpOASES CXX)
set(qpOASES_VERSION "3.2.0")

set(CMAKE_MODULE_PATH cmake)
include(ExternalProject)

ExternalProject_Add(
   qpOASES
   CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${CATKIN_DEVEL_PREFIX} -DCMAKE_CXX_FLAGS="-fPIC"
   SOURCE_DIR ${PROJECT_SOURCE_DIR}/qpOASES_svn
   SVN_TRUST_CERT 1
)

find_package(catkin REQUIRED)

catkin_package(
    INCLUDE_DIRS qpOASES_svn/include
    LIBRARIES qpOASES
)

install(
    DIRECTORY qpOASES_svn/include
    DESTINATION ${CMAKE_INSTALL_PREFIX}
    PATTERN ".svn" EXCLUDE
)
install(
    FILES ${CATKIN_DEVEL_PREFIX}/lib/${CMAKE_STATIC_LIBRARY_PREFIX}${PROJECT_NAME}${CMAKE_STATIC_LIBRARY_SUFFIX}
    DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
)
